--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
 
     <color name="color_white_t">#CCFFFFFF</color>
     <color name="color_link">#0D47A1</color>
+
+    <color name="primaryColor">#2e7d32</color>
+    <color name="primaryDarkColor">#005005</color>
+    <color name="secondaryColor">#f44336</color>
+    <color name="secondaryDarkColor">#ba000d</color>
 </resources>
